--- a/vagrantfile
+++ b/vagrantfile
@@ -1,6 +1,7 @@
 Vagrant.configure("2") do |config|
-	config.vm.hostname = "vdocker"
+	config.vm.hostname = "main"
     config.vm.box = "bento/ubuntu-22.04"
 	# config.vm.network "public_network"
 	config.vm.network "private_network", ip: "10.0.0.102"
+    config.vm.synced_folder '.', '/vagrant', disabled: true
 end
